Created top nav and header in HTML

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,8 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>npm</title>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
 <body>
-  <!-- Your code goes here -->
+  <nav>
+    <div class="nav-left">
+      <a href="#" class="heart">♥︎</a>
+      <span class="acronym">Naughty Programmer's Madness</span>
+    </div>
+    <div class="nav-links">
+      <ul>
+        <li><a href="#">npm Enterprise</a></li>
+        <li><a href="#">features</a></li>
+        <li><a href="#">pricing</a></li>
+        <li><a href="#">documentation</a></li>
+        <li><a href="#">support</a></li>      
+      </ul>
+    </div>
+  </nav>
+  <header>
+    <div class="top-bar">
+      <img src="images/npm-logo.png" alt="npm-logo" class="logo">
+      <form class="search-bar" action="/results">
+      <input type="text" placeholder="find packages">
+      <button type="submit"><i class="fa fa-search"></i></button>
+      </form>
+      <a href="#" class="login-link">sing up or login</a>
+      <img src="images/bear-logo.png" alt="bear-logo" class="bear-logo">
+    </div>
+    <div class="container">
+      <h1>Build amazin things</h1>
+      <p>npm is the package manager for JavaScript and the world’s largest software registry. Discover packages of reusable code — and assemble them in powerful new ways.</p>
+      <a href="#">Sign up for npm</a>
+      <img src="images/city-scape.svg" alt="city-landscape">
+    </div>
+  </header>
 </body>
 </html>
