--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -34,11 +34,51 @@
       <img src="images/bear-logo.png" alt="bear-logo" class="bear-logo">
     </div>
     <div class="container">
-      <h1>Build amazin things</h1>
+      <h1>Build amazing things</h1>
       <p>npm is the package manager for JavaScript and the world’s largest software registry. Discover packages of reusable code — and assemble them in powerful new ways.</p>
       <a href="#">Sign up for npm</a>
-      <img src="images/city-scape.svg" alt="city-landscape">
     </div>
   </header>
+  <section class="npm-org">
+    <div class="container">
+      <img src="images/collaboration.svg" alt="collaboration">
+      <h2>npm Orgs is powerful collaboration - for free</h2>
+      <ul>
+        <li>Encourage code discovery and re-use within teams</li>
+        <li>Publish and control access to your own namespace</li>
+        <li>Manage public and private code with the same workflow</li>
+      </ul>
+      <a href="#">Sign up for Orgs</a>
+      <p>or, <a href="#">Learn more about Orgs</a></p>
+    </div>
+  </section>
+  <section class="what-is-npm">
+    <div class="container">
+        <h2>What is npm?</h2>
+        <p>Use npm to install, share, and distribute code; manage dependencies in your projects; and share & receive feedback with others.</p>
+        <a href="#">Install npm</a>
+      </div>
+  </section>
+  <section class="npm-packages">
+    <div class="container">
+      <h2>What can you make with 475,000 building blocks?</h2>
+      <p>The npm registry hosts almost half a million packages of free, reusable code - the largest software registry in the world.</p>
+      <div>
+        <img src="images/binoculars.svg" alt="binoculars">
+        <h3>Find</h3>
+        <p>Libraries like <a href="#">jQuery</a>, <a href="#">Bootstrap</a>, <a href="#">React</a>, and <a href="#">Angular</a>, and components from frameworks such as <a href="#">Ember</a>.</p>
+      </div>
+      <div>
+        <img src="images/mountain-flag.svg" alt="mountain-flag">
+        <h3>Discover</h3>
+        <p>Packages for mobile, IoT, front end, back end, robotics… everything you need to start building amazing things.</p>
+      </div>
+      <div>
+        <img src="images/backpack.svg" alt="backpack">
+        <h3>Build</h3>
+        <p>Assemble packages like building blocks to quickly develop awesome new projects.</p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
